--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="empty_state_text">Unable to Load.\n Pls try again in sometime !</string>
     <string name="loading_state_text">"Loading News..."</string>
     <string name="no_internet_state_text">No Internet.\n Pls check internet connection and try again !</string>
+    <string name="settings">Settings</string>
+    <string name="refresh">Refresh</string>
+    <string name="about_us">About Us</string>
 </resources>
